rename as pezdb

--- a/database/makefile
+++ b/database/makefile
@@ -6,12 +6,14 @@ REPO = $(REPOROOT)/pez
 
 # 1) create tables in local MySQL database
 
-F1 = makefile create_tables.sql
+F1 = makefile create_tables.sql export.sh import.sh 
 
 $(F1): %: $(REPO)/database/%
 	cp $< $@
 
-create-tables: $(F1)
+db-files: $(F1)
+
+create-tables: db-files
 	mysql test < create_tables.sql
 
 # 2. populate the tables with your corporate directory,
@@ -28,8 +30,18 @@ load-sample-data: $(F2)
 
 # 3. Export the tables from the local host database
 
-./export.sh
+# ./export.sh
 
-# 4. import the tables into the docker container
+# 4. Create the MySQL container
 
-./import.sh
+container-files:
+	rsync -avu $(REPO)/database/docker/ docker/
+	copy $(REPO)/database/create_tables.sql docker
+
+
+# see: INSTALL.md
+
+
+# 5. import the tables into the docker container
+
+# ./import.sh
